--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "typescript": "~4.1.5"
   },
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
     "openapi-typescript": "^4.0.2",
     "openapi-typescript-codegen": "^0.9.3",
     "sass-loader": "^12.1.0"
