--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@types/react-redux": "^7.1.7",
     "classnames": "^2.3.1",
     "idb": "^6.1.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
+    "ngraph.forcelayout": "^3.2.0",
+    "ngraph.graph": "^19.1.0",
+    "ngraph.path": "^1.3.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
@@ -51,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.173",
     "@types/react-custom-scrollbars": "^4.0.8",
     "@types/react-router-dom": "^5.1.8",
     "openapi-typescript": "^4.0.2",
