--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "classnames": "^2.3.1",
+    "csstype": "^3.0.9",
     "idb": "^6.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -22,6 +23,7 @@
     "ngraph.graph": "^19.1.0",
     "ngraph.path": "^1.3.1",
     "node-sass": "^6.0.1",
+    "panzoom": "^9.4.2",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd": "^14.0.3",
